Finalisation de la partie fonctionnement et ajout de quelques démos

--- a/css/reveal.scss
+++ b/css/reveal.scss
@@ -25,8 +25,16 @@ img[alt=logo] {
 	left: 0;
 	right: 0;
 	top: 10%;
-
 	font-size: 1.5rem !important;
+}
+
+.legende {
+	font-size: 1.2rem;
+	color: gray;
+}
+
+.small-text{
+	font-size: smaller;
 }
 
 /*********************************************
